# FastAPI-Blog-Website

./: .gitignore  LICENSE  README.md  app.css  pyproject.toml  requirements.txt  start_fast_api.ps1  start_fast_api.sh  start_tailwind.ps1  start_tailwind.sh  tailwind.config.js
blog_website/: defaults.py  main.py
blog_website/admin_views/: __init__.py  blog_post_view.py  contact_submission_view.py  user_token_view.py  user_view.py
blog_website/auth/: __init__.py  admin_auth.py
blog_website/models/: __init__.py  blog_post.py  contact_submission.py  user.py  user_token.py
blog_website/services/: __init__.py  blog_post_service.py  contact_form_service.py  email_service.py  preview_blog_post_service.py  token_service.py
blog_website/static/: site.webmanifest
blog_website/static/css/: tailwind.css
blog_website/templates/: about.jinja  email_contact_form.jinja  header.jinja
