[tool.poetry]
name = "blog-website"
version = "0.1.0"
description = ""
authors = ["EuanHoll"]
readme = "README.md"
packages = [{include = "blog_website"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.1"
pytailwindcss = "^0.2.0"
pydantic = "^2.5.2"
sqlalchemy = "^2.0.23"
sqladmin = {extras = ["full"], version = "^0.16.0"}
uvicorn = "^0.24.0.post1"
bcrypt = "^4.1.2"
pytz = "^2023.3.post1"
python-multipart = "^0.0.6"
requests = "^2.31.0"
mistune = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
