[project]
name = "blog-website"
version = "0.1.0"
description = ""
authors = [{ name = "EuanHoll" }]
requires-python = ">=3.11,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastapi",
    "pytailwindcss",
    "pydantic",
    "sqlalchemy",
    "sqladmin[full]",
    "uvicorn",
    "bcrypt",
    "pytz",
    "python-multipart",
    "requests",
    "mistune",
]

[tool.uv]

[tool.uv.build-backend]
module-name = ["blog_website"]
module-root = ""

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
